--- a/radioTest.html
+++ b/radioTest.html
@@ -4,8 +4,80 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>radioTest</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <h1>radioTest</h1>
+
+  <fieldset id="horizontalFieldSet">
+    
+    <legend>this is a radio test</legend>
+
+    <input type="radio" id="hfszero" name="test1" />
+    <label for="zero">0</label>
+
+    <input type="radio" id="hfsone" name="test1" />
+    <label for="zero">1</label>
+
+    <input type="radio" id="hfstwo" name="test1" />
+    <label for="zero">2</label>
+
+    <input type="radio" id="hfsthree" name="test1" />
+    <label for="zero">3</label>
+
+    <input type="radio" id="hfsfour" name="test1" />
+    <label for="zero">4</label>
+
+    <input type="radio" id="hfsfive" name="test1" />
+    <label for="zero">5</label>
+
+    <input type="radio" id="hfssix" name="test1" />
+    <label for="zero">6</label>
+
+    <input type="radio" id="hfsseven" name="test1" />
+    <label for="zero">7</label>
+
+  </fieldset>
+  
+  <fieldset id="verticalFieldSet">
+    
+    <legend>this is a radio test</legend>
+
+  <div>
+    <input type="radio" id="vfszero" name="test1" />
+    <label for="zero">0</label>
+  </div>
+  <div>
+    <input type="radio" id="vfsone" name="test1" />
+    <label for="zero">1</label>
+  </div>
+  <div>
+    <input type="radio" id="vfstwo" name="test1" />
+    <label for="zero">2</label>
+  </div>
+  <div>
+    <input type="radio" id="vfsthree" name="test1" />
+    <label for="zero">3</label>
+  </div>
+  <div>
+    <input type="radio" id="vfsfour" name="test1" />
+    <label for="zero">4</label>
+  </div>
+  <div>
+    <input type="radio" id="vfsfive" name="test1" />
+    <label for="zero">5</label>
+  </div>
+  <div>
+    <input type="radio" id="vfssix" name="test1" />
+    <label for="zero">6</label>
+  </div>
+  <div>
+    <input type="radio" id="vfsseven" name="test1" />
+    <label for="zero">7</label>
+  </div>
+  </fieldset>
+
 </body>
 </html>
+
+<!-- need to be able to click on label to activate the radio button -->
