set up sequencer transport

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tone-sequencer</title>
-  <script src="http://unpkg.com/tone"></script>
+  <script src="https://unpkg.com/tone" defer></script>
   <script src="sequencer.js" defer></script>
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
   <h1>tone sequencer</h1>
-  <button onclick="playNote()">Click me to play note!</button>
+  <button id="transport-toggle">⏵</button>
 </body>
 </html>
